--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <body>
   <h1>My first day!</h1>
+  I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard to focus.
+
+  I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a full time mom.
 
 </body>
 
