new entry button

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
 </head>
 
 <body>
-  <h1>My first day!</h1>
-  I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard to focus.
+  <h1>Code Works Journal!</h1>
 
-  I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a full time mom.
+  <div>
+    <button id="start-button" onclick="entry()">New Entry</button>
+  </div>
 
-  hello world
+  <p> I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard to
+    focus.
+
+    I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a full time
+    mom.</p>
+
+
 
 </body>
 
