--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Journal</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,12 +13,15 @@
   <div>
     <button id="start-button" onclick="entry()">New Entry</button>
   </div>
+  <div>
+    <span>Number of entry:</span>
+    <span id="journal-wrote">0</span>
+  </div>
 
-  <p> I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard to
-    focus.
-
-    I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a full time
-    mom.</p>
+  <p> I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard
+    tofocus. I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a
+    fulltime mom.
+  </p>
 
 
 
