--- a/index.html
+++ b/index.html
@@ -17,12 +17,33 @@
     <span>Number of entry:</span>
     <span id="journal-wrote">0</span>
   </div>
-
-  <p> I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard
-    tofocus. I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a
-    fulltime mom.
+  <h1>ENTRY ONE</h1>
+  <p>
+    <h3>I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard
+      tofocus. I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a
+      fulltime mom.</h3>
   </p>
+  <h1>ENTRY TWO 3/20/2020</h1>
+  <p>
+    <h3>
+      I was surprised at the way my stress about starting school started to disappear toward the end of the first week.
+      I found myself excited to work on my daily projects especially at home. The start of this week I was feeling more
+      confident, and then almost instantly felt like I was at the bottom of a very long staircase that seemed to go on
+      forever. The overwhelming feeling that i had the first week was back and the doubts started to flood in.."what was
+      I thinking I cant do this","Im so far behind,how will I ever catch up", "I cant ask a question cause I dont know
+      what to ask but I feel completly lost." On and on my head was filled with self doubt. Luckily I am a stubborn
+      person and know that I will not be giving up, but that stubborness also hurts me at times when I become to proud
+      or afraid to ask for help. I know that I have a better understanding than I did at the begining of the week. That
+      understanding is small, but growing.
+      I knew coming into this I would be destroying my comfort zone. I just did have a full understanding at how hard
+      that was going to be. I have never felt successful in school, and was teased alot for not understanding not just
+      by students but mostly teachers. Im grateful for the instructors and staff here who want to see you successed and
+      never put you down for what you dont understand.
+      The only person standing in my way is me. My goals for this upcoming week is the learn to believe in myself, ask
+      questions, and simply do the best I can.
+    </h3>
 
+  </p>
 
 
 </body>
