--- a/index.html
+++ b/index.html
@@ -1,51 +1,108 @@
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Journal</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Code Works Journal!</h1>
-
-  <div>
-    <button id="start-button" onclick="entry()">New Entry</button>
-  </div>
-  <div>
-    <span>Number of entry:</span>
-    <span id="journal-wrote">0</span>
-  </div>
-  <h1>ENTRY ONE</h1>
-  <p>
-    <h3>I was very nervous to start school. I know I struggle with remembering things, and i have to work extra hard
-      tofocus. I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not being a
-      fulltime mom.</h3>
-  </p>
-  <h1>ENTRY TWO 3/20/2020</h1>
-  <p>
-    <h3>
-      I was surprised at the way my stress about starting school started to disappear toward the end of the first week.
-      I found myself excited to work on my daily projects especially at home. The start of this week I was feeling more
-      confident, and then almost instantly felt like I was at the bottom of a very long staircase that seemed to go on
-      forever. The overwhelming feeling that i had the first week was back and the doubts started to flood in.."what was
-      I thinking I cant do this","Im so far behind,how will I ever catch up", "I cant ask a question cause I dont know
-      what to ask but I feel completly lost." On and on my head was filled with self doubt. Luckily I am a stubborn
-      person and know that I will not be giving up, but that stubborness also hurts me at times when I become to proud
-      or afraid to ask for help. I know that I have a better understanding than I did at the begining of the week. That
-      understanding is small, but growing.
-      I knew coming into this I would be destroying my comfort zone. I just did have a full understanding at how hard
-      that was going to be. I have never felt successful in school, and was teased alot for not understanding not just
-      by students but mostly teachers. Im grateful for the instructors and staff here who want to see you successed and
-      never put you down for what you dont understand.
-      The only person standing in my way is me. My goals for this upcoming week is the learn to believe in myself, ask
-      questions, and simply do the best I can.
-    </h3>
-
-  </p>
-
-
+  <header class="container-fluid">
+    <div class="row header justify-content-center text-info bg-secondary mb-5">
+      <h1>Code Works Journal!</h1>
+    </div>
+    <div class="row entry mb-5 ml-5 mr-5">
+      <div class="col-10 offset-1">
+        <h1 class="text-warning entryNum">WEEK ONE</h1>
+        <p>
+          <h4>I was very nervous to start school. I know I struggle with remembering things, and i have to work extra
+            hard
+            tofocus. I can be forgetful. I believe that i can overcome that as i get more sleep and i adjust to not
+            being
+            a
+            fulltime mom.</h4>
+        </p>
+      </div>
+    </div>
+    <div class="row entry mb-5 ml-5 mr-5">
+      <div class="col-10 offset-1">
+        <h1 class="text-warning entryNum">WEEK TWO 3/20/2020</h1>
+        <p>
+          <h4>
+            I was surprised at the way my stress about starting school started to disappear toward the end of the first
+            week.
+            I found myself excited to work on my daily projects especially at home. The start of this week I was feeling
+            more
+            confident, and then almost instantly felt like I was at the bottom of a very long staircase that seemed to
+            go
+            on
+            forever. The overwhelming feeling that i had the first week was back and the doubts started to flood
+            in.."what
+            was
+            I thinking I cant do this","Im so far behind,how will I ever catch up", "I cant ask a question cause I dont
+            know
+            what to ask but I feel completly lost." On and on my head was filled with self doubt. Luckily I am a
+            stubborn
+            person and know that I will not be giving up, but that stubborness also hurts me at times when I become to
+            proud
+            or afraid to ask for help. I know that I have a better understanding than I did at the begining of the week.
+            That
+            understanding is small, but growing.
+            I knew coming into this I would be destroying my comfort zone. I just did have a full understanding at how
+            hard
+            that was going to be. I have never felt successful in school, and was teased alot for not understanding not
+            just
+            by students but mostly teachers. Im grateful for the instructors and staff here who want to see you
+            successed
+            and
+            never put you down for what you dont understand.
+            The only person standing in my way is me. My goals for this upcoming week is the learn to believe in myself,
+            ask
+            questions, and simply do the best I can.
+          </h4>
+        </p>
+      </div>
+    </div>
+    <div class="row entry mb-5 ml-5 mr-5">
+      <div class="col-10 offset-1">
+        <h1 class="text-warning entryNum">WEEK THREE 3/30/2020</h1>
+        <p>
+          <h4>
+            Well the expected happened and our course has officially gone remote. Covid-19 has won and now my school
+            went from super freaking hard to super duper freaking hard. I have the hardest time following along in
+            lecture being at home. Kids are yelling, my brain wants to go sleep, and every other second I feel like I
+            need a snack. This last week destroyed my brain cells. I finished my project and I was able to do pretty
+            much all of it on my own, But I seriously have no idea what I did. Jake said that I know more that I
+            realize. I say "false"! All trial and error and then all of a sudden it would work and I had no clue how. I
+            did realize that Im terrible at naming things. NAMING CONVENTIONS ARE VERY IMPORTANT. Most of my mess ups/
+            entirely lost I believe were from being mislead by past me. So something I will being working on is making
+            sure that I make smart decisions when naming stuff. I cant believe that we are already in week 4. Time has
+            gone by so fast and I can tell that I know way more now than I did at the begining. Im excited for future me
+            and to feel way more lost and accomplished than I ever have.
+            New week, New frustrations, New progress.
+          </h4>
+        </p>
+      </div>
+    </div>
+  </header>
 </body>
+
+</html>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </html>
