--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 
 <body>
   <header class="container-fluid">
-    <div class="row header justify-content-center text-info bg-secondary mb-5">
-      <h1>Code Works Journal!</h1>
+    <div class="row header text-info bg-secondary mb-5">
+      <div class="col-4 headertext">
+        <h1>Code Works Journal!</h1>
+      </div>
+
     </div>
-    <div class="row entry mb-5 ml-5 mr-5">
-      <div class="col-10 offset-1">
-        <h1 class="text-warning entryNum">WEEK ONE</h1>
+    <div class="row mb-5 ml-5 mr-5">
+      <div class="col-6 entry">
+        <h1 class="text-warning entryNum">WEEK ONE:</h1>
         <p>
           <h4>I was very nervous to start school. I know I struggle with remembering things, and i have to work extra
             hard
@@ -30,10 +33,16 @@
             fulltime mom.</h4>
         </p>
       </div>
+      <div class="col-4 offset-2">
+
+        <img
+          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/91399081_10221921228964391_3665820828416606208_o.jpg?_nc_cat=108&_nc_sid=8024bb&_nc_ohc=0zHu5AgW3ycAX8fy2iX&_nc_ht=scontent-sea1-1.xx&oh=870cffecea67dd190ce4641a2e4eed7a&oe=5EA7690A"
+          class="img1" alt="">
+      </div>
     </div>
-    <div class="row entry mb-5 ml-5 mr-5">
-      <div class="col-10 offset-1">
-        <h1 class="text-warning entryNum">WEEK TWO 3/20/2020</h1>
+    <div class="row mb-5 ml-5 mr-5">
+      <div class="col-6 entry">
+        <h1 class="text-warning entryNum">WEEK TWO 3/20/2020:</h1>
         <p>
           <h4>
             I was surprised at the way my stress about starting school started to disappear toward the end of the first
@@ -70,9 +79,9 @@
         </p>
       </div>
     </div>
-    <div class="row entry mb-5 ml-5 mr-5">
-      <div class="col-10 offset-1">
-        <h1 class="text-warning entryNum">WEEK THREE 3/30/2020</h1>
+    <div class="row mb-5 ml-5 mr-5">
+      <div class="col-6 entry">
+        <h1 class="text-warning entryNum">WEEK THREE 3/30/2020:</h1>
         <p>
           <h4>
             Well the expected happened and our course has officially gone remote. Covid-19 has won and now my school
